# tdd_workshop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  calculator.py  grading_system.py  grading_systen_no_tdd.py  password_validator.py
tests/: __init__.py  test_calculator.py  test_control.py  test_grading_system.py  test_password_validator.py
