[project]
name = "tdd-workshop"
version = "0.1.0"
description = "Taller de Test-Driven Development con Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=5.10.1",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest-cov>=7.0.0",
]
